feat: add route home page function

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,9 +26,12 @@
             width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
           我的餐廳清單
         </a>
-      </div>
+        <div class="container">
+          <div class="input-group-append d-md-flex justify-content-md-end">
+            <a href="./restaurants/new" class="btn btn-warning" role="button" aria-pressed="true">Create</a>
+          </div>
+        </div>
     </nav>
-
     <div class="banner"></div>
   </header>
 
