--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
         <h4 class="mb-2">尋找餐廳：</h4>
         <div class="input-group">
           <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..."
-            value="{{keyword}}" aria-describedby="search-button">
+            value="{{keyword}}" aria-describedby="search-button"> 
           <div class="input-group-append">
             <button class="btn btn-major" type="submit" id="search-button"><i class="fas fa-search"></i></button>
           </div>
@@ -15,34 +15,37 @@
     </div>
   </div>
 </div>
-
 <!-- restaurant list -->
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-10 col-12 mx-auto">
       <div class="card-columns">
-
         {{#each restaurant}}
-        <a href="/restaurants/{{this.id}}" class="text-secondary">
-          <div class="card mb-3">
+        <a class="text-secondary">
+          <div class="card">
             <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
             <div class="card-body p-3">
               <h6 class="card-title mb-1">{{this.name}}</h6>
-
               <div class="restaurant-category mb-1">
                 <i class="fas fa-utensils pr-2"></i> {{this.category}}
               </div>
-
-              <span class="badge badge-pill badge-danger font-weight-normal">
-                {{this.rating}}
-                <i class="fas fa-star fa-xs"></i>
-              </span>
-
+              <div class="d-flex justify-content-around align-items-center">
+                <span class="badge badge-pill badge-danger font-weight-normal">
+                  {{this.rating}}
+                  <i class="fas fa-star fa-xs"></i>
+                </span>
+                <a href="/restaurants/{{this._id}}/edit" class="">Edit</a>
+                <form action="./restaurants/{{this._id}}/detail" method="POST" style="display: inline">
+                  <a href="/restaurants/{{this._id}}/detail" class="">Detail</a>
+                </form>
+                <form action="/restaurants/{{this._id}}/delete" method="POST" style="display: inline">
+                  <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                </form>
+              </div>
             </div>
           </div>
         </a>
         {{/each}}
-
       </div>
     </div>
   </div>
